<resources>
    <string name="app_name">Cobaev Prepárate</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Alumno(s)</string>
    <string name="menu_gallery">Notificaciones</string>
    <string name="menu_slideshow">Calificaciones</string>
    <string name="menu_privacidad">Aviso de privacidad</string>
    <string name="menu_send">Salir</string>
    <string name="menu_sesion">Cerrar Sesión</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Usuario no váalido</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">"Error al iniciar sesión"</string>
</resources>