<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_alumno"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_califica"
            android:icon="@drawable/ic_calificaciones"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_icon_noticias"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_privacidad"
            android:icon="@drawable/ic_privacy_policy_icon"
            android:title="@string/menu_privacidad" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_sesion"
                android:icon="@drawable/ic_icon_sesion"
                android:title="@string/menu_sesion" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_icon_salir"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
